<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="facebook_application_id" translatable="false">217172562213329</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb217172562213329</string>
    <string name="twitter_consumer_key" translatable="false">n8xbVdXKM7xgj9NwWvxQzrC56</string>
    <string name="twitter_consumer_secret" translatable="false">kP5w1hwMA2HZoUgYmb0Vhp27mqsTcCeu4VD72Ubk6wl0LT0NKQ</string>
    <string name="select_your_language">Select your language</string>
    <string name="forget_password">Forget password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="today">Today</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">`Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="ishaa">`Ishaa\'</string>
    <string name="next_fajr">Next Fajr</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="activity_contact_support_mobile_number" translatable="false">00966 2 6650682</string>
    <string name="activity_contact_support_email_address" translatable="false">gama-cs@gama-ksa.com</string>
    <string name="passport_number">Passport number</string>
    <string name="metric">Metric (KM,M2)</string>
    <string name="us">US (Mile,ft2)</string>
    <string name="navigate">Navigate</string>
    <string name="radius">Radius</string>
    <string name="gas_station">Gas Station</string>
    <string name="restaurant">Restaurant</string>
    <string name="mosque">Mosque</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="airport">Airport</string>
    <string name="_0_5_km">0.5 KM</string>
    <string name="_25_km">25 KM</string>
    <string name="default_radius">500 m</string>
    <string name="madeina">Madeina</string>
    <string name="mecca">Mecca</string>
    <string name="mazarat">Mazarat</string>
    <string name="others">Others</string>
    <string name="none" translatable="false">None</string>
    <string name="beep" translatable="false">Beep</string>
    <string name="eula">End User License Agreement</string>
    <string name="acknowledgement_">Ministry of Haj &amp; Umra</string>
    <string name="acknowledgment_text">The Ministry of Haj &amp; Umra carries out its duties in coordination with the government and local authorities to facilitate observance of pilgrimage, control and regulate services through the development of systems, use of technology, increasing the effectiveness of staff to serve pilgrims, and performance of infrastructure works with a core focus on offering religious hospitality in compliance with the international standards.</string>
    <string name="about_t1">Ministry of Haj &amp; Umra Objectives</string>
    <string name="about_us_text">In order to develop all the facilities needed to serve pilgrims, the Ministry seeks to achieve a full spectrum of objectives, mainly:</string>
    <string name="about_us_text1">Delivering high-quality services for the benefit of pilgrims.</string>
    <string name="about_us_text2">Using cutting edge technology to develop professions of guidance, brokerage, representation, and internal pilgrimage.</string>
    <string name="about_us_text3">Offering haj services with much ease and convenience th rough the use of human efforts and highly sophisticated technology.</string>
    <string name="about_us_text4">Improving staff skills on the ground to ensure that high-quality services are delivered to the pilgrims and Umrah performers by the use of effective and excellent training programs.</string>
    <string name="about_us_text5">Putting in place the slogan (serving pilgrims is an honor, honesty and responsibility).</string>
    <string name="about_us_text6">Coordinating with all relevant stakeholders to make the rituals of Haj &amp; Umra easier.</string>
    <string name="about_us_text7">Acting in accordance with the values and teachings of tolerant Islamic faith   to deliver a full range of high-class services.</string>
    <string name="about_us_text8">Unifying efforts to stimulate nationals to do their best in the service of pilgrims either voluntarily or otherwise.</string>
    <string name="about_t2">The Ministry of Haj and Umra would like to thank the Saudi Commission for Tourism and National Heritage (SCTA) regarding their cooperation in the Geographical Information for Historical and Heritage locations that been included in GYH Mutamer application.</string>
    <string name="adhan">Adhan</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="sdefault" translatable="false">Default</string>
    <string name="location_not_set">Could not get your location</string>
    <string name="anno_hegirae" translatable="false">AH</string>
    <string name="please_enter_passport_number">Please enter your username</string>
    <string name="please_enter_mobile_number">Please enter your password</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="login_fail">Login failed, Please check you username and password</string>
    <string name="service_error">Service error</string>
    <string name="forget_password_success">Password send to your email address</string>
    <string name="forget_password_fail">Invalid data, please try again</string>
    <string name="sorry">Sorry</string>
    <string name="service_connection_fail">Fail to connect to web service, please check your internet connection and try again</string>
    <string name="contact_support">Contact Support</string>
    <string name="splash_screen" translatable="false">Splash screen</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout from the GYH Mutamer app?</string>
    <string name="cancel">Cancel</string>
    <string name="close_umra_app">Close GYH Mutamer App</string>
    <string name="close_app_message">You are about to close GYH Mutamer App, Proceed?</string>
    <string name="close">Close</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="days_left_till_hajj">Time till Arafah Day</string>
    <string name="next_prayer_time">Next prayer time</string>
    <string name="weather_now">Weather now</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="all">All</string>
    <string name="no_data">No Data</string>
    <string name="notification">Notification</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="new_notification">New notification</string>
    <string name="response">Notifications</string>
    <string name="send_panic_success">Send Panic Success</string>
    <string name="send_panic_fail">Send Panic Fail</string>
    <string name="enable_gps">Please open GPS and enable it for this app</string>
    <string name="enter_issue_body">Please enter Complain body, minimum 3 characters</string>
    <string name="issue_description">Complain description</string>
    <string name="send">send</string>
    <string name="send_success">Send Complain success</string>
    <string name="send_fail">Send Complain failed, please try again</string>
    <string name="report_issue">Report an Complain</string>
    <string name="image_saved_successfully">Image saved successfully</string>
    <string name="saving_image_canceled" translatable="false">Image saving has been canceled</string>
    <string name="video_saved_successfully" translatable="false">Video saved successfully</string>
    <string name="saving_video_canceled" translatable="false">Video saving has been canceled</string>
    <string name="error_saving_image" translatable="false">Error while trying to save image</string>
    <string name="error_saving_video" translatable="false">Error while trying to save video</string>
    <string name="dir_mecca_images" translatable="false">meccaImages</string>
    <string name="dir_mecca_videos" translatable="false">meccaVideos</string>
    <string name="dir_madina_images" translatable="false">madinaImages</string>
    <string name="dir_madina_videos" translatable="false">madinaVideos</string>
    <string name="dir_others_images" translatable="false">othersImages</string>
    <string name="dir_others_videos" translatable="false">othersVideos</string>
    <string name="dir_report_images" translatable="false">reportImages</string>
    <string name="dir_report_videos" translatable="false">reportVideos</string>
    <string name="search">Search</string>
    <string name="you_are_here">You are here</string>
    <string name="near_by">Near by</string>
    <string name="km">KM</string>
    <string name="meter">m</string>
    <string name="ft">ft2</string>
    <string name="mile">mile</string>
    <string name="select_all">Select All</string>
    <string name="action_refresh">Refresh</string>
    <string name="duaa">Duaa</string>
    <string name="title_activity_view_place">View Place</string>
    <string name="unexcepted_error">Unexpected Error</string>
    <string name="islamic_places">Islamic Places</string>
    <string name="video_viewer">Video Viewer</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="nav_my_gallery">My Gallery</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="choose_dir">Choose Directory</string>
    <string name="reporting_issue" translatable="false">Issues Reports</string>
    <string name="copy">Copy</string>
    <string name="performing_this_holy_trip_via" translatable="false">Performing this holy trip via</string>
    <string name="agent">Agent</string>
    <string name="hajj_operator">Hajj Operator</string>
    <string name="nav_my_info">My Info</string>
    <string name="nav_my_program">My Program</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="settings">Settings</string>
    <string name="pray_notification">Pray Notifications</string>
    <string name="azan_calculation_method">Azan Calculation method</string>
    <string name="azan">Azan</string>
    <string name="vibrate">Vibrate</string>
    <string name="mecca_method">Umm al-Qura University, Makkah</string>
    <string name="muslim_method">Muslim World League</string>
    <string name="islamic_method">Islamic Society of North America</string>
    <string name="egypt_method">Egyptian General Authority of Survey</string>
    <string name="mute">Mute</string>
    <string name="issues">Complains</string>
    <string name="services">Services</string>
    <string name="qibla">Qibla</string>
    <string name="direction_to_kabba">Direction to Kabba</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_currencies">Exchange Currencies</string>
    <string name="important_numbers">Important numbers</string>
    <string name="helpful_numbers">Helpful numbers</string>
    <string name="not_logged">Not logged in</string>
    <string name="general">General</string>
    <string name="content">content</string>
    <string name="locations_and_places">Locations and transportations</string>
    <string name="info">Info</string>
    <string name="utilities">Utilities</string>
    <string name="alert">Alert</string>
    <string name="app_banner" translatable="false">Application banner graphics</string>
    <string name="no_login_description">Please log-in to be able to show your information</string>
</resources>