<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.gama.mutamer.fragments.ServicesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/llQibla"
            style="@style/settingCard">

            <ImageView
                style="@style/settingsIcon"
                android:src="@drawable/ic_compass"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/settingTitle"
                    android:text="@string/qibla"/>

                <TextView
                    style="@style/settingValue"
                    android:text="@string/direction_to_kabba"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llExchange"
            style="@style/settingCard">

            <ImageView
                style="@style/settingsIcon"
                android:src="@drawable/ic_exchange"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/settingTitle"
                    android:text="@string/exchange"/>

                <TextView
                    style="@style/settingValue"
                    android:text="@string/exchange_currencies"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llImportantNumbers"
            style="@style/settingCard">

            <ImageView
                style="@style/settingsIcon"
                android:src="@drawable/ic_important_numbers"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/settingTitle"
                    android:text="@string/important_numbers"/>

                <TextView
                    style="@style/settingValue"
                    android:text="@string/helpful_numbers"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
