<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/bottomSheetHeaderTitle"
            android:text="@string/pray_notification"/>

        <Button

            android:id="@+id/btnCancel"
            style="@style/bottomSheetDialogButton"

            android:text="@string/close"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvPrayNotification"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"

                    android:src="@drawable/ic_pray_notification"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/alert"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvPrayAzan"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_pray_azan"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/azan"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/prayNotificationsCard"
            android:id="@+id/cvPrayVibrate"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_pray_vibrate"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/vibrate"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/prayNotificationsCard"
            android:id="@+id/cvPrayMute"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_pray_mute"/>

                <TextView
                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/mute"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>



</LinearLayout>
