<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/bottomSheetHeaderTitle"
            android:text="@string/units"/>

        <Button

            android:id="@+id/btnCancel"
            style="@style/bottomSheetDialogButton"

            android:text="@string/close"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvMetricUnits"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"

                    android:src="@drawable/ic_kilo"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/metric"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvUsUnit"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_mph"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/us"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>



</LinearLayout>
