<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/bottomSheetHeaderTitle"
            android:text="@string/language"/>

        <Button

            android:id="@+id/btnCancel"
            style="@style/bottomSheetDialogButton"

            android:text="@string/close"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvEnglish"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"

                    android:src="@drawable/ic_en"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/english"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvArabic"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_ar"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/arabic"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>



</LinearLayout>
