<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/bottomSheetHeaderTitle"
            android:text="@string/azan_calculation_method"/>

        <Button

            android:id="@+id/btnCancel"
            style="@style/bottomSheetDialogButton"

            android:text="@string/close"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvUmmQura"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"

                    android:src="@drawable/ic_um_qura"/>

                <TextView

                    android:lines="2" style="@style/bottomSheetGridChoiceCardTitle"
                    android:text="@string/mecca_method"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvMuslimLeage"
            style="@style/prayNotificationsCard"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_muslim_world_leage"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:lines="2"
                    android:text="@string/muslim_method"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            style="@style/prayNotificationsCard"
            android:id="@+id/cvNorthAmerica"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:src="@drawable/ic_islamic_of_north_america"/>

                <TextView

                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:lines="2"
                    android:text="@string/islamic_method"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/prayNotificationsCard"
            android:id="@+id/cvEgyptionMethod"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    style="@style/bottomSheetGridChoiceCardImage"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_egyption_survy"/>

                <TextView
                    style="@style/bottomSheetGridChoiceCardTitle"
                    android:lines="2"
                    android:text="@string/egypt_method"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
