<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"

              android:background="@color/colorPrimaryDark"
              android:gravity="center"
              android:paddingBottom="8dp"


              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="4dp"
            android:text="@string/not_logged"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            tools:text="m.saad@gama-ksa.com"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login"
            android:textAllCaps="false"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/logout"
            android:textAllCaps="false"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>
